fix: fix assembling svg and modal text-align

--- a/async-race/src/styles/style.scss
+++ b/async-race/src/styles/style.scss
@@ -308,4 +308,5 @@ footer {
   font-weight: bold;
   color: rgb(255, 208, 0);
   text-shadow:  1px -4px 22px yellow, 0 0 1em red, 0 0 1.2em red;
+  text-align: center;
 }
